--- a/nuweb/ReprodStochOrder.tex
+++ b/nuweb/ReprodStochOrder.tex
@@ -501,8 +501,8 @@ it changes $Q$ only multiplicatively.
 \mbox{}\verb@#'the performed number of iterations}@\\
 \mbox{}\verb@#'@{\tt @}\verb@author Aniko Szabo, aszabo@{\tt @}\verb@@{\tt @}\verb@mcw.edu@\\
 \mbox{}\verb@#'@{\tt @}\verb@seealso \code{\link{soControl}}@\\
-\mbox{}\verb@#'@{\tt @}\verb@references Szabo A, George EO. (2009) On the Use of Stochastic Ordering to@\\
-\mbox{}\verb@#'Test for Trend with Clustered Binary Data. \emph{Biometrika}@\\
+\mbox{}\verb@#'@{\tt @}\verb@references Szabo A, George EO. (2010) On the Use of Stochastic Ordering to@\\
+\mbox{}\verb@#'Test for Trend with Clustered Binary Data. \emph{Biometrika} 97(1), 95-108.@\\
 \mbox{}\verb@#'@{\tt @}\verb@keywords nonparametric models@\\
 \mbox{}\verb@#'@{\tt @}\verb@examples@\\
 \mbox{}\verb@#'@\\
@@ -2026,8 +2026,8 @@ specifies the number of resamples, \texttt{method} could be either ``ISDM'' or
 \mbox{}\verb@#'@{\tt @}\verb@author Aniko Szabo, aszabo@{\tt @}\verb@@{\tt @}\verb@mcw.edu@\\
 \mbox{}\verb@#'@{\tt @}\verb@seealso \code{\link{SO.LRT}} for calculating only the test statistic,@\\
 \mbox{}\verb@#'\code{\link{soControl}}@\\
-\mbox{}\verb@#'@{\tt @}\verb@references Szabo A, George EO. (2009) On the Use of Stochastic Ordering to@\\
-\mbox{}\verb@#'Test for Trend with Clustered Binary Data.@\\
+\mbox{}\verb@#'@{\tt @}\verb@references Szabo A, George EO. (2010) On the Use of Stochastic Ordering to@\\
+\mbox{}\verb@#'Test for Trend with Clustered Binary Data. \emph{Biometrika} 97(1), 95-108.@\\
 \mbox{}\verb@#'@{\tt @}\verb@keywords htest nonparametric@\\
 \mbox{}\verb@#'@{\tt @}\verb@examples@\\
 \mbox{}\verb@#'@\\
